# rpsp

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
boards/: README.md  generate.py
boards/data/: pico.layout  tiny2040.layout  xiao2040.layout
src/: atomic.rs  clock.rs  cores.rs  cyw.rs  dma.rs  fifo.rs  i2c.rs  int.rs  interp.rs  io.rs  lib.rs  locks.rs  pico.rs  pin.rs  pio.rs  rand.rs  spi.rs  sys.rs  time.rs  uart.rs  watchdog.rs
src/clock/: alarm.rs  rtc.rs  sys.rs
src/cyw/: data.rs  device.rs
src/pin/: adc.rs  led.rs  pwm.rs
src/pin/boards/: lib.rs  pico.rs  tiny2040.rs  xiao2040.rs
src/pio/: config.rs  group.rs  int.rs  io.rs
